# benchy

./: .env.sample  .gitignore  PROJECT_OVERVIEW.ja.md  README.ja.md  README.md  RESULTS.ja.md  RESULTS.md  aider  aider-deepseek.sh  aider-o1-deep.sh  aider-o1-fireworks-deep.sh  aider-o1-o1.sh  aider-o1-sonney.sh  aider-o1.sh  aider-o3mini-sonney.sh  aider-r1-deep.sh  aider-r1-r1.sh  aider-r1-sonney.sh  aider-r1.sh  aider-s-s.sh  aider-sonney.sh  deepseek-client.sh  deforest.sh  fs  fullstack  llm_providers_details.xml  o3-mini-sota-summary.md  openrouter.sh  package.json  start.sh  start_tree_clients.sh  thoughts-benchmark.yaml  toolcall  tooltable  vite.config.ts  wrap-thought-bench.yaml
client/: package.json  (+1 more)
server/: debug_env.py  exbench.py  llm_models.py  openrouter.py  pyproject.toml  report.json  server.py  utils.py
server/benchmark_data/: 10x_information_parser_v1.yaml  codebase_context_gatherer_v1.yaml  fine_tune__target_math.yaml  fine_tune__target_math_page_2.yaml  simple_function_coder.yaml  simple_function_coder_micro.yaml  simple_math.yaml  simple_math_micro.yaml  simple_math_midcro.yaml  simple_typer_commands.yaml  simple_typer_commands_micro.yaml  simple_typer_commands_o3.yaml  simple_typer_commands_r1.yaml
server/data/: simple_math.yaml
server/modules/: anthropic_llm.py  data_types.py  deepseek_llm.py  exbench_module.py  execution_evaluators.py  fireworks_llm.py  gemini_llm.py  llm_models.py  ollama_llm.py  openai_llm.py  tools.py
server/reports/: 10-q_Quarterly_Report_Parser_20250201_102818.json  10-q_Quarterly_Report_Parser_20250201_103136.json  (+49 more)
(+97 files in other folders)
